test/parse/expr/bad-br-defined-later.txt
;;; ERROR: 1
(module
  (func
    br 1
    block 
      nop
    end))
(;; STDERR ;;;
out/test/parse/expr/bad-br-defined-later.txt:4:5: error: invalid depth: 1 (max 0)
    br 1
    ^^^^
;;; STDERR ;;)
